--- a/travis.yml
+++ b/travis.yml
@@ -9,7 +9,7 @@ deploy:
   - provider: elasticbeanstalk
     access_key_id: ${AWS_ACCESS_KEY_ID}
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
-    region: "ap-south-1"
+    region: "us-east-1"
     app: "next-app"
     env: "next-app-staging"
     bucket_name: ${AWS_S3_BUCKET}
