--- a/travis.yml
+++ b/travis.yml
@@ -10,8 +10,8 @@ deploy:
     access_key_id: ${AWS_ACCESS_KEY_ID}
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
     region: "us-east-2"
-    app: "next-app"
-    env: "next-app-staging"
+    app: "pga-next-app"
+    env: "PgaNextApp-env"
     bucket_name: ${AWS_S3_BUCKET}
     on:
       branch: "staging"
@@ -20,8 +20,8 @@ deploy:
     access_key_id: ${AWS_ACCESS_KEY_ID}
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
     region: "us-east-2"
-    app: "next-app"
-    env: "next-app-production"
+    app: "pga-next-app"
+    env: "PgaNextApp-env"
     bucket_name: ${AWS_S3_BUCKET}
     on:
       branch: "master"
