--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,4 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm start"
-    
+  - namespace: aws:elasticbeanstalk:container:nodejs
+    option_name: NodeCommand
+    value: "npm start"
