--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development node ./server.js",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "deploy-staging": "NODE_ENV=staging next build &&    NODE_ENV=staging node ./server.js",
-    "deploy-production": "NODE_ENV=production next build && NODE_ENV=production node ./server.js"
+    "start": "next start"
   },
   "dependencies": {
     "express": "^4.17.1",
