--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next run build",
-    "start": "next run start"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "express": "^4.17.1",
