--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pga2",
   "version": "0.1.0",
+  "main": "server.js",
   "private": true,
   "scripts": {
     "dev": "node server.js",
