--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "deploy": "NODE_ENV=production next build && NODE_ENV=production node ./server.js"
+    "start": "NODE_ENV=production next build && NODE_ENV=production node ./server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
