--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "next": "^9.4.4",
+    "pg": "^8.3.0",
+    "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
