--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sequelize": "^6.3.3"
   }
 }
