dev- partly broken

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "next": "^9.4.4",
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
