--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "start": "NODE_ENV=production next build && NODE_ENV=production node ./server.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "express": "^4.17.1",
+    "formik": "^2.1.5",
     "fs": "0.0.1-security",
+    "grommet": "^2.14.0",
+    "grommet-icons": "^4.4.0",
     "next": "^9.4.4",
     "next-connect": "^0.8.1",
+    "next-google-fonts": "^1.2.1",
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sequelize": "^6.3.3"
+    "sequelize": "^6.3.3",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
     "nodemon": "^2.0.4"
   }
 }
