--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sequelize": "^6.3.3"
+    "sequelize": "^6.3.3",
+    "webpack": "^4.44.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
