--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
     "webpack": "^4.44.0"
   },
   "devDependencies": {
