lti with localhost db

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/core": "^7.10.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "ltijs": "^5.0.2",
+    "ltijs-sequelize": "^1.0.6",
     "net": "^1.0.2",
     "next": "^9.4.4",
     "next-connect": "^0.8.1",
