--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "main.js",
   "private": true,
   "babelrc": false,
+  "engines": {
+    "npm": "6.x",
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "NODE_ENV=development node ./main.js",
     "build": "next build",
