--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "babelrc": false,
   "engines": {
-    "npm": "6.x",
-    "node": "12.x"
+    "npm": "6.14.6",
+    "node": "12.18.3"
   },
   "scripts": {
     "dev": "NODE_ENV=development node ./main.js",
