--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "NODE_ENV=development node ./main.js",
     "build": "next build",
     "start": "NODE_ENV=production node main.js -p $PORT",
-    "deploy-production": "NODE_ENV=production next build && NODE_ENV=production node ./main.js"
+    "deploy-production": "NODE_ENV=production next build && NODE_ENV=production node ./main.js",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -45,6 +46,14 @@
     "@babel/node": "^7.10.4",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "nodemon": "^2.0.4"
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
