--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development node ./main.js",
+    "dev-local": "NODE_ENV=local node ./main.js",
     "build": "next build",
     "start": "NODE_ENV=production node main.js -p $PORT",
     "deploy-production": "NODE_ENV=production next build && NODE_ENV=production node ./main.js",
