--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ltijs": "^5.0.3",
     "ltijs-sequelize": "^1.0.6",
     "net": "^1.0.2",
-    "next": "^9.5.1",
+    "next": "^9.5.5",
     "next-connect": "^0.8.1",
     "next-google-fonts": "^1.2.1",
     "next-server": "^9.0.5",
@@ -51,10 +51,19 @@
     "@babel/node": "^7.10.4",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^26.3.0",
     "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-babel": "^9.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
   },
   "jest": {
