--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
-  "trailingComma": "es5",
+  "semi": true,
+  "useTabs": false,
   "tabWidth": 2,
-  "semi": true
+  "trailingComma": "all",
+  "printWidth": 80
 }
