--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "printWidth": 80
 }
