--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.32.5",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.0.0",
     "styled-components": "^5.1.1",
