--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sass": "^1.32.5",
+    "sass": "^1.32.6",
+    "sass-loader": "^11.0.0",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.0.0",
     "styled-components": "^5.1.1",
@@ -59,6 +60,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.3.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-babel": "^9.0.0",
     "eslint-config-prettier": "^6.10.0",
@@ -75,6 +77,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
+    "style-loader": "^2.0.0",
     "supertest": "^4.0.2"
   },
   "jest": {
