--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "formik": "^2.1.5",
+    "formik-material-ui": "^3.0.1",
     "fs": "0.0.1-security",
     "grommet": "^2.14.0",
     "grommet-icons": "^4.4.0",
