--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pdf": "^5.2.0",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.0",
     "sequelize": "^6.3.4",
