--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-cutter": "^0.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "express": "^4.17.1",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.1",
