--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sqlite3": "^5.0.0",
     "styled-components": "^5.1.1",
     "swr": "^0.3.0",
+    "tls": "0.0.1",
     "webpack": "^4.44.1"
   },
   "devDependencies": {
