--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-cutter": "^0.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
