--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.13.1",
     "react-markdown": "^5.0.3",
     "react-pdf": "^5.2.0",
