--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^4.0.0",
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.1",
@@ -40,6 +41,7 @@
     "keyv": "^4.0.3",
     "ltijs": "^5.0.3",
     "ltijs-sequelize": "^1.0.6",
+    "mailslurp-client": "^12.4.4",
     "net": "^1.0.2",
     "next": "^9.5.5",
     "next-connect": "^0.8.1",
@@ -50,6 +52,7 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.13.1",
+    "react-gmail": "^1.0.1",
     "react-markdown": "^5.0.3",
     "react-pdf": "^5.2.0",
     "remark-gfm": "^1.0.0",
