--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postgres": "^1.0.2",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^5.0.3",
     "react-pdf": "^5.2.0",
