--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.873.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.7.1",
     "cookie-cutter": "^0.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -51,6 +52,7 @@
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^4.1.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.13.1",
     "react-gmail": "^1.0.1",
