--- a/package.json
+++ b/package.json
@@ -16,86 +16,60 @@
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles"
   },
   "dependencies": {
-    "@keyv/sqlite": "^2.0.2",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@keyv/sqlite": "^3.5.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "aws-sdk": "^2.873.0",
+    "@material-ui/system": "^4.12.2",
+    "aws-sdk": "^2.1131.0",
     "axios": "^0.21.4",
-    "bcryptjs": "^2.4.3",
-    "cookie-cutter": "^0.2.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
-    "cryptr": "^6.0.2",
-    "dotenv": "^8.2.0",
-    "emailjs-com": "^3.2.0",
-    "express": "^4.17.1",
-    "formik": "^2.1.5",
-    "formik-material-ui": "^3.0.1",
-    "fs": "0.0.1-security",
-    "gmail-send": "^1.8.10",
-    "grommet": "^2.14.0",
-    "grommet-icons": "^4.4.0",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cryptr": "^6.0.3",
+    "express": "^4.18.1",
+    "formik": "^2.2.9",
+    "gmail-send": "^1.8.14",
+    "grommet": "^2.23.0",
     "ims-lti": "^3.0.2",
     "js-cookie": "^2.2.1",
-    "keyv": "^4.0.3",
-    "ltijs": "^5.8.8",
-    "ltijs-sequelize": "^1.0.6",
-    "mailslurp-client": "^12.4.4",
-    "net": "^1.0.2",
+    "keyv": "^4.2.2",
+    "lodash": "^4.17.21",
     "next": "^9.5.5",
-    "next-connect": "^0.8.1",
-    "next-google-fonts": "^1.2.1",
+    "next-google-fonts": "^1.3.0",
     "next-server": "^9.0.5",
-    "pg": "^8.3.0",
-    "postgres": "^1.0.2",
-    "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "^17.0.2",
-    "react-gmail": "^1.0.1",
-    "react-loadingmask": "^4.0.6",
+    "pg": "^8.7.3",
+    "pify": "^5.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^16.14.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^16.14.0",
     "react-markdown": "^5.0.3",
-    "react-pdf": "^5.2.0",
     "remark-gfm": "^1.0.0",
-    "request": "^2.88.2",
-    "sass": "^1.32.6",
-    "sass-loader": "^11.0.0",
+    "sass": "^1.51.0",
     "sequelize": "^6.19.0",
-    "sqlite3": "^5.0.4",
-    "styled-components": "^5.1.1",
-    "swr": "^0.3.0",
-    "webpack": "^4.44.1"
+    "styled-components": "^5.3.5",
+    "swr": "^0.3.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "@babel/node": "^7.10.4",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.13.0",
-    "eslint-config-babel": "^9.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-testing-library": "^3.10.0",
-    "jest": "^26.4.2",
-    "nodemon": "^2.0.4",
+    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-testing-library": "^3.10.2",
+    "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "style-loader": "^2.0.0",
     "supertest": "^4.0.2"
   },
   "jest": {
