--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "^8.3.0",
     "postgres": "^1.0.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-gmail": "^1.0.1",
